--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
         </div>
         <div class="col-md-8">
             <p>Designed to protect your Internet traffic.</p>
-            <p><a https://boxvietroot.t.me" target="blank">Truy cập bằng một cú nhấp chuột để kết nối thế giới!</a></p>
+            <p><a https://boxvietroot.t.me/" target="blank">Truy cập bằng một cú nhấp chuột để kết nối thế giới!</a></p>
         </div>
     </div>
-    <p class="mb-3 text-body-secondary">©&nbsp;2023-2024 <a href="https://boxvietroot.t.me" target="blank">OHB</a></p>
+    <p class="mb-3 text-body-secondary">©&nbsp;2023-2024 <a href="https://boxvietroot.t.me/" target="blank">OHB</a></p>
 </main>
 <textarea id="copy" readonly="readonly" style="display: none"></textarea>
 <script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/bootstrap/5.1.3/js/bootstrap.min.js"
