--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div class="col-md-8">
             <p>Designed to protect your Internet traffic.</p>
-            <p><a https://boxvietroot.t.me/" target="blank">Truy cập bằng một cú nhấp chuột để kết nối thế giới!</a></p>
+            <p><a href="https://boxvietroot.t.me/" target="blank">Truy cập bằng một cú nhấp chuột để kết nối thế giới!</a></p>
         </div>
     </div>
     <p class="mb-3 text-body-secondary">©&nbsp;2023-2024 <a href="https://boxvietroot.t.me/" target="blank">OHB</a></p>
