--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </ol>
     </div>
     <div class="mb-3">
-        <a class="btn btn-outline-primary btn-lg" href="https://boxvietroot.t.me/" target="blank">Tham gia nhóm Telegram</a>
+        <a class="btn btn-outline-primary btn-lg" href="https://t.me/boxvietroot" target="blank">Tham gia nhóm Telegram</a>
     </div>
     <div class="row text-start justify-content-center" id="apple">
         <div class="col-auto my-5" id="loading"><i aria-hidden="true" class="spinner-border me-5"></i> Tải thông tin tài khoản mới nhất
